# KRPO_Project

KRPO_DumperDll/sources/: Dumper.cpp  Dumper.hpp
KRPO_NetlistEditor/: CodeEditor.cpp  CodeEditor.h  Highlighter.cpp  Highlighter.h  KRPO_NetlistEditor.sln  KRPO_NetlistEditor.vcxproj  KRPO_NetlistEditor.vcxproj.filters  MainWindow.cpp  MainWindow.h  main.cpp
KRPO_Simulator/sources/: Dumper.hpp  Netlist.cpp  Netlist.hpp  NetlistReader.cpp  NetlistReader.hpp  PluginManager.cpp  PluginManager.hpp  Simulator.cpp  Simulator.hpp  Solver.hpp  main.cpp
KRPO_SolverDll/sources/: Solver.cpp  Solver.hpp
KRPO_Topology_Qt/: CMakeLists.txt
KRPO_Topology_Qt/include/: DrawingWidget.h  MainWindow.h
KRPO_Topology_Qt/src/: DrawingWidget.cpp  MainWindow.cpp  main.cpp
KRPO_Waveform/: KRPO_Waveform.aps  KRPO_Waveform.sln  KRPO_Waveform.vcxproj  KRPO_Waveform.vcxproj.filters  MainWindow.cpp  MainWindow.h  Plot.h  PlotWidget.cpp  PlotWidget.h  PlotWidget.txt  main.cpp
KRPO_WinAPI/: ColorLib.cpp  ColorLib.h  DesignLayout.h  FileIO.cpp  FileIO.h  KRPO_WinAPI.sln  KRPO_WinAPI.vcxproj  KRPO_WinAPI.vcxproj.filters  main.cpp
KRPO_WinAPI/samples/: sample1  sample2
